--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-queries.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 </head>
 <body>
     <main>
@@ -16,8 +17,19 @@
             <div id="Iform">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="login.php" method="post">
-
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined" class="icon">person</span>
+                        <input type="email" name="email" id="Iemail" placeholder="Seu email" required autocomplete="email" maxlength="30">
+                        <label for="Iemail">Login</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined" class="icon">lock</span>
+                        <input type="password" name="senha" id="Isenha" placeholder="Sua senha" required autocomplete="current-password" minlength="6" maxlength="15">
+                        <label for="Isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esquece.html"> Esqueci a senha <span class="material-symbols-outlined" class="icon">mail</span></a>
                 </form>
             </div>
         </section>
