projeto login - botões

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <label for="Isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esquece.html"> Esqueci a senha <span class="material-symbols-outlined" class="icon">mail</span></a>
+                    <a href="esquece.html" class="button"> Esqueci a senha <span class="material-symbols-outlined" class="icon">mail</span></a>
                 </form>
             </div>
         </section>
