--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <span class="material-symbols-outlined" class="icon">person</span>
-                        <input type="email" name="email" id="Iemail" placeholder="Seu email" required autocomplete="email" maxlength="30">
+                        <span class="material-symbols-outlined">person</span>
+                        <input type="email" name="email" id="Iemail" placeholder=" Seu email" required autocomplete="email" maxlength="30">
                         <label for="Iemail">Login</label>
                     </div>
                     <div class="campo">
-                        <span class="material-symbols-outlined" class="icon">lock</span>
-                        <input type="password" name="senha" id="Isenha" placeholder="Sua senha" required autocomplete="current-password" minlength="6" maxlength="15">
+                        <span class="material-symbols-outlined">lock</span>
+                        <input type="password" name="senha" id="Isenha" placeholder=" Sua senha" required autocomplete="current-password" minlength="6" maxlength="15">
                         <label for="Isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
