projeto login - aprimorando

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
                         <input type="password" name="senha" id="Isenha" placeholder=" Sua senha" required autocomplete="current-password" minlength="6" maxlength="15">
                         <label for="Isenha">Senha</label>
                     </div>
-                    <input type="submit" value="Entrar">
-                    <a href="esquece.html" class="button"> Esqueci a senha <span class="material-symbols-outlined" class="icon">mail</span></a>
+                    <div id="submit">
+                        <input type="submit" value="Entrar">
+                        <a href="esquece.html" class="button"> Esqueci a senha <span class="material-symbols-outlined">mail</span></a>
+                    </div>
                 </form>
             </div>
         </section>
