--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
                     <div id="submit">
                         <input type="submit" value="Entrar">
-                        <a href="esquece.html" class="button"> Esqueci a senha <span class="material-symbols-outlined">mail</span></a>
+                        <a href="esquece.html" class="button" rel="previous" target="_blank"> Esqueci a senha <span class="material-symbols-outlined">mail</span></a>
                     </div>
                 </form>
             </div>
